# Simple-Image-Lib

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_and_run_tests.yml
src/: sil.cpp  sil.hpp
tests/: CMakeLists.txt  tests.cpp
